<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>com.otilm</groupId>
		<artifactId>dependencies</artifactId>
		<version>1.4.2</version>
	</parent>

	<artifactId>ip-discovery-provider</artifactId>
	<version>1.7.0-SNAPSHOT</version>
	<name>ip-discovery-provider</name>
	<description>Certificate Discovery Connector for ILM based on IP address range and ports</description>

	<properties>
		<java.version>21</java.version>
		<ipaddress.version>5.5.1</ipaddress.version>
		<sonar.organization>ilm</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<sonar.projectKey>ilm_ip-discovery-provider</sonar.projectKey>
		<!-- Excluded from coverage only where there is no branching logic to assert, or where a live
		     database is required. Everything carrying real logic stays in - notably config/** and
		     enums/**, which the sibling connectors exclude but which are tested here. -->
		<sonar.coverage.exclusions>
			<!-- Spring Boot bootstrap: main() and nothing else -->
			src/main/java/com/otilm/discovery/ip/Application.java,
			<!-- AOP aspect that only executes at DEBUG, and logs rather than decides -->
			src/main/java/com/otilm/discovery/ip/LoggingAdvice.java,
			<!-- annotation-driven exception-to-status mappings, no logic of their own -->
			src/main/java/com/otilm/discovery/ip/ExceptionHandlingAdvice.java,
			<!-- controllers delegate straight to the services, which are covered -->
			src/main/java/com/otilm/discovery/ip/api/**,
			<!-- JPA entities and their accessors -->
			src/main/java/com/otilm/discovery/ip/dao/**,
			<!-- data holder -->
			src/main/java/com/otilm/discovery/ip/dto/**,
			<!-- Flyway Java migration: needs a populated database to exercise -->
			src/main/java/db/migration/**
		</sonar.coverage.exclusions>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.otilm</groupId>
			<artifactId>interfaces</artifactId>
			<version>2.20.0-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcpkix-jdk18on</artifactId>
		</dependency>

		<!-- https://mvnrepository.com/artifact/commons-net/commons-net -->
		<dependency>
			<groupId>commons-net</groupId>
			<artifactId>commons-net</artifactId>
		</dependency>

		<dependency>
			<groupId>com.github.seancfoley</groupId>
			<artifactId>ipaddress</artifactId>
			<version>${ipaddress.version}</version>
		</dependency>

		<dependency>
			<groupId>com.pivovarit</groupId>
			<artifactId>parallel-collectors</artifactId>
			<version>3.3.0</version>
		</dependency>

		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
		</dependency>

		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-database-postgresql</artifactId>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<configuration>
					<packagingExcludes>
						**/META-INF/maven/**,
					</packagingExcludes>
					<archive>
						<addMavenDescriptor>false</addMavenDescriptor>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<executable>true</executable>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>@{argLine}</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>github</id>
			<url>https://maven.pkg.github.com/omnitrustilm/*</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>central-portal</id>
			<url>https://central.sonatype.com/repository/maven-snapshots/</url>
		</repository>
	</repositories>

</project>
